# HiJoke

./: .gitignore  CMakeLists.txt  README.md  compile_run.sh  config.js  config.json  database.sqlite  main.cpp  settings.cpp  settings.h  start.sh
Application/: BaseHandler.cpp  BaseHandler.h
Application/comment/: CommentHandler.cpp  CommentHandler.h
Application/joke/: JokeHandler.cpp  JokeHandler.h
Application/login/: LoginHandler.cpp  LoginHandler.h
Application/logout/: LogoutHandler.cpp  LogoutHandler.h
Application/register/: RegisterHandler.cpp  RegisterHandler.h
Application/staticserver/: StaticServer.cpp  StaticServer.h
DatabaseManager/: DatabaseOperator.cpp  DatabaseOperator.h
DatabaseManager/comment/bean/: Comment.cpp  Comment.h
DatabaseManager/comment/manager/: CommentManager.cpp  CommentManager.h
DatabaseManager/joke/bean/: Joke.cpp  Joke.h
DatabaseManager/joke/manager/: JokeManager.cpp  JokeManager.h
DatabaseManager/user/bean/: User.cpp  User.h
DatabaseManager/user/manager/: UserManager.cpp  UserManager.h
Static/: StaticServer.cpp  StaticServer.h
Static/app-css/: app-css.css
Static/app-js/: function.js  login.js  logout.js
Templates/: content.h  index.tmpl  login.tmpl  views.cpp
TestCase/: database.sqlite  rest.http  test.cpp
Utils/: HttpClient.cpp  HttpClient.h  Utils.cpp  Utils.h
